add images for gameplay_prototyping

--- a/gameplay_prototyping.html
+++ b/gameplay_prototyping.html
@@ -67,7 +67,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="Life_Snap.PNG">
+                        <img src="images/gameplay_prototyping/Life_Snap.PNG">
                         <span class="card-title">Life (Group Project)</span>
                     </div>
                     <div class="card-content white-text">
@@ -88,7 +88,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="Game1.png">
+                        <img src="images/gameplay_prototyping/Game1.png">
                         <span class="card-title">Endless Runner (Individual Project)</span>
                     </div>
                     <div class="card-content white-text">
@@ -110,7 +110,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="Game3.png">
+                        <img src="images/gameplay_prototyping/Game3.png">
                         <span class="card-title">A Race Against Time (Individual Project)</span>
                     </div>
                     <div class="card-content white-text">
@@ -134,7 +134,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="Game4.jpg">
+                        <img src="images/gameplay_prototyping/Game4.jpg">
                         <span class="card-title">Heroes Never Die (Individual Project)</span>
                     </div>
                     <div class="card-content white-text">
@@ -157,7 +157,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="Game5.png">
+                        <img src="images/gameplay_prototyping/Game5.png">
                         <span class="card-title" style="color: #676869;">DODGECUBE (Individual Project)</span>
                     </div>
                     <div class="card-content white-text">
@@ -180,7 +180,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="Game%20Screenshot.png">
+                        <img src="images/gameplay_prototyping/Game%20Screenshot.png">
                         <span class="card-title">Alternate Control Project 1 (Group Project)</span>
                     </div>
                     <div class="card-content white-text">
@@ -199,7 +199,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="Capture.PNG">
+                        <img src="images/gameplay_prototyping/Capture.PNG">
                         <span class="card-title">Alternate Control Project 2 (Group Project)</span>
                     </div>
                     <div class="card-content white-text">
@@ -218,7 +218,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="cascade.jpg">
+                        <img src="images/gameplay_prototyping/cascade.jpg">
                         <span class="card-title">Analysing and Designing for Cascade (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -246,7 +246,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="candy.PNG">
+                        <img src="images/gameplay_prototyping/candy.PNG">
                         <span class="card-title">Match-3 Game in Unity (In Progress) (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -268,7 +268,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="vacation.png">
+                        <img src="images/gameplay_prototyping/vacation.png">
                         <span class="card-title" style="color: black">Card and Dice Game (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -283,7 +283,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="cube.PNG">
+                        <img src="images/gameplay_prototyping/cube.PNG">
                         <span class="card-title">Cube Simulator (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -305,7 +305,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="rts.PNG">
+                        <img src="images/gameplay_prototyping/rts.PNG">
                         <span class="card-title">2 Weeks Later (Group)</span>
                     </div>
                     <div class="card-content white-text">
@@ -328,7 +328,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="design_game_on_spot.jpg">
+                        <img src="images/gameplay_prototyping/design_game_on_spot.jpg">
                         <span class="card-title" style="color: black">Object-Based Game Design (Group)</span>
                     </div>
                     <div class="card-content white-text">
@@ -343,7 +343,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="godot.PNG">
+                        <img src="images/gameplay_prototyping/godot.PNG">
                         <span class="card-title">High Roller - Godot Engine (Group)</span>
                     </div>
                     <div class="card-content white-text">
@@ -364,7 +364,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="sports.PNG">
+                        <img src="images/gameplay_prototyping/sports.PNG">
                         <span class="card-title">Designing a Sports Game (Group)</span>
                     </div>
                     <div class="card-content white-text">
@@ -382,7 +382,8 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="There%20Will%20Be%20Blood%20Game%20Board%20-%20Varun%20Sunil%20Bajaj.jpg">
+                        <img
+                            src="images/gameplay_prototyping/There%20Will%20Be%20Blood%20Game%20Board%20-%20Varun%20Sunil%20Bajaj.jpg">
                         <span class="card-title">Designing a Movie-based Board Game (Individual)</span>
                     </div>
                     <div class="card-content white-text">
