add files, links for first half of gameplay_prototyping

--- a/gameplay_prototyping.html
+++ b/gameplay_prototyping.html
@@ -96,13 +96,13 @@
                             the magma!</p>
                     </div>
                     <div class="card-action">
-                        <a href="EndlessRunner_VarunBajaj.rar" download="EndlessRunner_VarunBajaj.rar">Download</a>
-                        <a onclick="showhide1();">Watch Gameplay</a>
+                        <a href="https://drive.google.com/file/d/1w1oQPJ2ZfPmUYSihvezm_xefPVDjf0v3/view?usp=sharing"
+                            download="EndlessRunner_VarunBajaj.rar" target="_blank">Download</a>
+                        <a onclick="showhide_video('video1', 'video1id');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="video1" style="display: none;">
-                        <video class="responsive-video" controls id="video1id">
-                            <source src="Magmaman%20Gameplay.mp4" type="video/mp4">
-                        </video>
+                        <iframe id="video1id"
+                            src="https://drive.google.com/file/d/1p_3k9jFj8S4DSoY6zcXHszO7bLEZ-dh2/preview"></iframe>
                     </div>
                 </div>
             </div>
@@ -118,13 +118,13 @@
                             Engine 4!</p>
                     </div>
                     <div class="card-action">
-                        <a href="RaceAgainstTime_VarunBajaj.rar" download="RaceAgainstTime_VarunBajaj.rar">Download</a>
-                        <a onclick="showhide_race();">Watch Gameplay</a>
+                        <a href="https://drive.google.com/file/d/1bllwVxAgukX1p_TUP-jW584haXNQL1e-/view?usp=sharing"
+                            download="RaceAgainstTime_VarunBajaj.rar" target="_blank">Download</a>
+                        <a onclick="showhide_video('racevideodiv', 'racevideoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="racevideodiv" style="display: none;">
-                        <video class="responsive-video" controls id="racevideoid">
-                            <source src="Race%20Against%20Time%20Gameplay.mp4" type="video/mp4">
-                        </video>
+                        <iframe id="racevideoid"
+                            src="https://drive.google.com/file/d/1rxyblsPJ43kXneQHIbtMDTIMlesqOz93/preview"></iframe>
                     </div>
                 </div>
             </div>
@@ -142,57 +142,59 @@
                             endless swarms of enemies! Made using Unreal Engine 4!</p>
                     </div>
                     <div class="card-action">
-                        <a href="TwinStickShooter_VarunBajaj.rar"
-                            download="TwinStickShooter_VarunBajaj.rar">Download</a>
-                        <a onclick="showhide_twinstick();">Watch Gameplay</a>
+                        <a href="https://drive.google.com/file/d/1EJ5dYUvFUHj403TEsaNv-lpc-oQEYwF5/view?usp=sharing"
+                            download="TwinStickShooter_VarunBajaj.rar" target="_blank">Download</a>
+                        <a onclick="showhide_video('twinvideodiv', 'twinvideoid');">Watch Gameplay</a>
                     </div>
                     <div class="video-container" id="twinvideodiv" style="display: none;">
-                        <video class="responsive-video" controls id="twinvideoid">
-                            <source src="Twin%20Stick%20Shooter%20Gameplay.mp4" type="video/mp4">
-                        </video>
+                        <iframe id="twinvideoid"
+                            src="https://drive.google.com/file/d/1adjqfNjkNv380K8cPoTn3R4_Ca28IqwY/preview"></iframe>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="col s12 m4 l4">
-                <div class="card hoverable black">
-                    <div class="card-image">
-                        <img src="images/gameplay_prototyping/Game5.png">
-                        <span class="card-title" style="color: #676869;">DODGECUBE (Individual Project)</span>
-                    </div>
-                    <div class="card-content white-text">
-                        <p>You are a cube.
-                            <br>DODGE!
-                            <br>Made using Unity 3D!</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="DODGECUBE_VarunBajaj.rar" download="DODGECUBE_VarunBajaj.rar">Download</a>
-                        <a onclick="showhide_cube();">Watch Gameplay</a>
-                    </div>
-                    <div class="video-container" id="cubevideodiv" style="display: none;">
-                        <video class="responsive-video" controls id="cubevideoid">
-                            <source src="DODGECUBE%20Gameplay.mp4" type="video/mp4">
-                        </video>
-                    </div>
+        <div class="col s12 m4 l4">
+            <div class="card hoverable black">
+                <div class="card-image">
+                    <img src="images/gameplay_prototyping/Game5.png">
+                    <span class="card-title" style="color: #676869;">DODGECUBE (Individual Project)</span>
+                </div>
+                <div class="card-content white-text">
+                    <p>You are a cube.
+                        <br>DODGE!
+                        <br>Made using Unity 3D!</p>
+                </div>
+                <div class="card-action">
+                    <a href="https://drive.google.com/file/d/1quoUeMNrYBXyK0pFYu8IK6zaoouOXiQP/view?usp=sharing"
+                        download="DODGECUBE_VarunBajaj.rar" target="_blank">Download</a>
+                    <a onclick="showhide_video('cubevideodiv', 'cubevideoid');">Watch Gameplay</a>
+                </div>
+                <div class="video-container" id="cubevideodiv" style="display: none;">
+                    <iframe id="cubevideoid"
+                        src="https://drive.google.com/file/d/1j2DU6JK6pdz0LFdLqOIo2WqZoWAEajEW/preview"></iframe>
                 </div>
             </div>
+        </div>
 
-            <div class="col s12 m4 l4">
-                <div class="card hoverable black">
-                    <div class="card-image">
-                        <img src="images/gameplay_prototyping/Game%20Screenshot.png">
-                        <span class="card-title">Alternate Control Project 1 (Group Project)</span>
-                    </div>
-                    <div class="card-content white-text">
-                        <p>Creating a controller called Octopad 3000, that allows 8 people to simultaneously control the
-                            movement of a fish underwater.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="FishGame_Game%20Files.zip" download="Varun Sunil Bajaj - FishGame.zip">Game</a>
-                        <a href="Octopad%203000.docx" download="Varun Sunil Bajaj - Octopad_Manual.docx">Manual</a>
-                    </div>
+        <div class="col s12 m4 l4">
+            <div class="card hoverable black">
+                <div class="card-image">
+                    <img src="images/gameplay_prototyping/Game%20Screenshot.png">
+                    <span class="card-title">Alternate Control Project 1 (Group Project)</span>
+                </div>
+                <div class="card-content white-text">
+                    <p>Creating a controller called Octopad 3000, that allows 8 people to simultaneously control the
+                        movement of a fish underwater.</p>
+                </div>
+                <div class="card-action">
+                    <a href="https://drive.google.com/file/d/1XcZ-nlaNTwX_zdNFNG_okpoKsgVyHZB1/view?usp=sharing"
+                        download="Varun Sunil Bajaj - FishGame.zip" target="_blank">Game</a>
+                    <a href="https://drive.google.com/file/d/1ULL9lZSsFJ4JB8Z74z0a0vKlcCzCtpUN/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Octopad_Manual.docx" target="_blank">Manual</a>
                 </div>
             </div>
+        </div>
         </div>
 
         <div class="row">
@@ -208,9 +210,10 @@
                             his/ her character by moving the hands and legs on a stick figure!</p>
                     </div>
                     <div class="card-action">
-                        <a href="DanceFu1.0.unitypackage.gz" download="Varun Sunil Bajaj - DanceFu.gz">Game</a>
-                        <a href="IMG_20180327_142708.jpg" download="Varun Sunil Bajaj - Stick Figure.jpg"
-                            target="_blank">Stick Figure Controller</a>
+                        <a href="https://drive.google.com/file/d/1xKOvBQMx4qH1vg5QkIy4_EpUujoDwn_F/view?usp=sharing"
+                            download="Varun Sunil Bajaj - DanceFu.gz" target="_blank">Game</a>
+                        <a href="images/gameplay_prototyping/Varun Sunil Bajaj - Stick Figure.jpg"
+                            download="Varun Sunil Bajaj - Stick Figure.jpg" target="_blank">Stick Figure Controller</a>
                     </div>
                 </div>
             </div>
@@ -225,17 +228,17 @@
                         <p>Designing a Holiday-themed level and a new mechanic for the Match-3 game Cascade!</p>
                     </div>
                     <div class="card-action">
-                        <a href="Cascade%20Design%20Challenge%201%20-%20Designing%20a%20hoilday%20themed%20level%20-%20Varun%20Sunil%20Bajaj.docx"
-                            download="Varun Sunil Bajaj - Cascade Design 1.docx">Design 1 Doc</a>
-                        <a href="Cascade%20Design%20Challenge%201%20-%20Varun%20Sunil%20Bajaj.jpg"
+                        <a href="https://drive.google.com/file/d/1vdpzgX9N_ymHitZp2A8fFryv43yn22lB/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Cascade Design 1.docx" target="_blank">Design 1 Doc</a>
+                        <a href="images/gameplay_prototyping/Cascade Design Challenge 1 - Varun Sunil Bajaj.jpg"
                             download="Varun Sunil Bajaj - Cascade Design 1.jpg" target="_blank">Design 1 Image</a><br>
-                        <a href="Cascade%20Design%20Challenge%202%20-%20Designing%20a%20new%20mechanic%20-%20Varun%20Sunil%20Bajaj.docx"
-                            download="Varun Sunil Bajaj - Cascade Design 2.docx">Design 2 Doc</a>
-                        <a href="Cascade%20Design%20Challenge%202%20-%20Image%201%20-%20Varun%20Sunil%20Bajaj.png"
+                        <a href="https://drive.google.com/file/d/1x9Erqx_pfigpBmayeE48bxkfrgJoOmCE/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Cascade Design 2.docx" target="_blank">Design 2 Doc</a>
+                        <a href="images/gameplay_prototyping/Cascade Design Challenge 2 - Image 1 - Varun Sunil Bajaj.png"
                             download="Varun Sunil Bajaj - Cascade Design 2 - Image 1.jpg" target="_blank">Design 2 -
                             Image
                             1</a>
-                        <a href="Cascade%20Design%20Challenge%202%20-%20Image%202%20-%20Varun%20Sunil%20Bajaj.png"
+                        <a href="images/gameplay_prototyping/Cascade Design Challenge 2 - Image 2 - Varun Sunil Bajaj.png"
                             download="Varun Sunil Bajaj - Cascade Design 2 - Image 2.jpg" target="_blank">Design 2 -
                             Image
                             2</a>
