complete gameplay_prototyping page

--- a/gameplay_prototyping.html
+++ b/gameplay_prototyping.html
@@ -153,7 +153,6 @@
                 </div>
             </div>
 
-
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -256,12 +255,11 @@
                         <p>Making a Match-3 game from scratch in Unity!</p>
                     </div>
                     <div class="card-action">
-                        <a onclick="showhide_candy()">Watch Gameplay</a>
+                        <a onclick="showhide_video('match3videodiv', 'match3videoid')">Watch Gameplay</a>
                     </div>
-                    <div class="video-container" id="2d" style="display: none;">
-                        <video class="responsive-video" controls id="2d">
-                            <source src="Match%203%20Game%20-%20Progress%20So%20Far.mp4" type="video/mp4">
-                        </video>
+                    <div class="video-container" id="match3videodiv" style="display: none;">
+                        <iframe id="match3videoid"
+                            src="https://drive.google.com/file/d/1AmENGQkt9uLRGkMAYoA_20Z06Kw74sch/preview"></iframe>
                     </div>
                 </div>
             </div>
@@ -278,8 +276,9 @@
                         <p>Designing a Card and Dice based game!</p>
                     </div>
                     <div class="card-action">
-                        <a href="Card%20and%20Dice%20Game%20Rule%20Sheet%20-%20Varun%20Sunil%20Bajaj.pdf"
-                            download="Varun Sunil Bajaj - Card and Dice Game Rule Sheet.pdf">Rule Sheet</a>
+                        <a href="https://drive.google.com/file/d/1Ik5WBuen2HLoSDq2tcuJRkb_4hrtMES0/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Card and Dice Game Rule Sheet.pdf" target="_blank">Rule
+                            Sheet</a>
                     </div>
                 </div>
             </div>
@@ -293,14 +292,13 @@
                         <p>A weekend-long prototyping project!</p>
                     </div>
                     <div class="card-action">
-                        <a href="Cube%20Simulator%20Game%20Files.zip"
-                            download="CubeSimulator_VarunBajaj.rar">Download</a>
-                        <a onclick="showhide();">Watch Gameplay</a>
+                        <a href="https://drive.google.com/file/d/14o1O12vx2qf_GnO8uC841pOJ4V3pw8K2/view?usp=sharing"
+                            download="CubeSimulator_VarunBajaj.rar" target="_blank">Download</a>
+                        <a onclick="showhide_video('cube2videodiv', 'cube2videoid');">Watch Gameplay</a>
                     </div>
-                    <div class="video-container" id="video" style="display: none;">
-                        <video class="responsive-video" controls id="video">
-                            <source src="Cube_Gameplay.mp4" type="video/mp4">
-                        </video>
+                    <div class="video-container" id="cube2videodiv" style="display: none;">
+                        <iframe id="cube2videoid"
+                            src="https://drive.google.com/file/d/1Yb_BgoLXTx8w7y0DFBuylNSkJwfT6KRg/preview"></iframe>
                     </div>
                 </div>
             </div>
@@ -315,13 +313,13 @@
                         <p>A tower-defense RTS game!</p>
                     </div>
                     <div class="card-action">
-                        <a href="RTS_Game.zip" download="RTS_Game_VarunBajaj.rar">Download</a>
-                        <a onclick="showhide_rts();">Watch Trailer</a>
+                        <a href="https://drive.google.com/file/d/1tnfgDgCn0n2NSYW5ovuoeuJMV28pxIq3/view?usp=sharing"
+                            download="RTS_Game_VarunBajaj.rar" target="_blank">Download</a>
+                        <a onclick="showhide_video('rtsvideodiv', 'rtsvideoid');">Watch Trailer</a>
                     </div>
-                    <div class="video-container" id="video_rts" style="display: none;">
-                        <video class="responsive-video" controls id="video_rts">
-                            <source src="2%20Weeks%20Later%20Official%20Release%20Trailer%202018.mp4" type="video/mp4">
-                        </video>
+                    <div class="video-container" id="rtsvideodiv" style="display: none;">
+                        <iframe id="rtsvideoid"
+                            src="https://drive.google.com/file/d/1PsvUn5HDmwu_YxBqDzKulz1gMo7BISkn/preview"></iframe>
                     </div>
                 </div>
             </div>
@@ -338,8 +336,8 @@
                         <p>Designing a game around an object on the spot!</p>
                     </div>
                     <div class="card-action">
-                        <a href="Object%20based%20Game%20Design.pdf"
-                            download="Varun Sunil Bajaj - Object Based Game Design.pdf">Rule Sheet</a>
+                        <a href="https://drive.google.com/file/d/17bYxcpygF9E0UhQeYJBqFpl-F3-hPQsj/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Object Based Game Design.pdf" target="_blank">Rule Sheet</a>
                     </div>
                 </div>
             </div>
@@ -353,13 +351,13 @@
                         <p>Learning an engine over a weekend - Godot Engine!</p>
                     </div>
                     <div class="card-action">
-                        <a href="Godot_GameFiles.zip" download="Godot_GameFiles_VarunBajaj.rar">Download</a>
-                        <a onclick="showhide_godot();">Watch Gameplay</a>
+                        <a href="https://drive.google.com/file/d/1A58uxZU7ptumIZndt5_dLJ__Fpd6LTWW/view?usp=sharing"
+                            download="Godot_GameFiles_VarunBajaj.rar" target="_blank">Download</a>
+                        <a onclick="showhide_video('godotvideodiv', 'godotvideoid');">Watch Gameplay</a>
                     </div>
-                    <div class="video-container" id="video_godot" style="display: none;">
-                        <video class="responsive-video" controls id="video_godot">
-                            <source src="Godot%20Platformer%20Gameplay.mp4" type="video/mp4">
-                        </video>
+                    <div class="video-container" id="godotvideodiv" style="display: none;">
+                        <iframe id="godotvideoid"
+                            src="https://drive.google.com/file/d/1nMqX55IqX1sgFC_IBknYadYweT4T9Fdu/preview"></iframe>
                     </div>
                 </div>
             </div>
@@ -374,8 +372,8 @@
                         <p>Designing a rule sheet for a sports game, from scratch!</p>
                     </div>
                     <div class="card-action">
-                        <a href="Sports%20Game%20Rule%20Sheet.pdf"
-                            download="SportsGameRuleSheet_VarunBajaj.pdf">Download</a>
+                        <a href="https://drive.google.com/file/d/1f-x0ErspAmtIwns7HEuEW6Bdb5MjP4zL/view?usp=sharing"
+                            download="SportsGameRuleSheet_VarunBajaj.pdf" target="_blank">Download</a>
                     </div>
                 </div>
             </div>
@@ -394,10 +392,10 @@
                         </p>
                     </div>
                     <div class="card-action">
-                        <a href="There%20Will%20Be%20Blood%20Board%20Game%20Rule%20Sheet%20-%20Varun%20Sunil%20Bajaj.pdf"
-                            download="ThereWillBeBlood_VarunBajaj.pdf">Download Rule Sheet</a>
-                        <a href="There%20Will%20Be%20Blood%20Game%20Board%20-%20Varun%20Sunil%20Bajaj.jpg"
-                            download="ThereWillBeBlood_GameBoard.jpg">Download Game Board</a>
+                        <a href="https://drive.google.com/file/d/1To0hCO4H7jHEv4odhTFPLWIUSqYvmbB4/view?usp=sharing"
+                            download="ThereWillBeBlood_VarunBajaj.pdf" target="_blank">Download Rule Sheet</a>
+                        <a href="images/gameplay_prototyping/There%20Will%20Be%20Blood%20Game%20Board%20-%20Varun%20Sunil%20Bajaj.jpg"
+                            download="ThereWillBeBlood_GameBoard.jpg" target="_blank">Download Game Board</a>
                     </div>
                 </div>
             </div>
