add leveldesign images

--- a/leveldesign.html
+++ b/leveldesign.html
@@ -69,7 +69,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="Stunner3.png" />
+            <img src="images/leveldesign/Stunner3.png" />
             <span class="card-title">Enemy-based Level Design (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -87,7 +87,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="Portal-Pic.png" />
+            <img src="images/leveldesign/Portal-Pic.png" />
             <span class="card-title">Portal Level Design (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -110,7 +110,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="steepcover.jpg" />
+            <img src="images/leveldesign/steepcover.jpg" />
             <span class="card-title">Steep Level Design (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -129,7 +129,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="Far%20Cry%20Level%20Editor.PNG" />
+            <img src="images/leveldesign/Far%20Cry%20Level%20Editor.PNG" />
             <span class="card-title">Far Cry Level Design (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -152,7 +152,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="l1.png" />
+            <img src="images/leveldesign/l1.png" />
             <span class="card-title">2D Platformer Level Design (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -178,7 +178,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="l2.png" />
+            <img src="images/leveldesign/l2.png" />
             <span class="card-title">CS GO Level Design (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -215,7 +215,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="l3.png" />
+            <img src="images/leveldesign/l3.png" />
             <span class="card-title">GTA 5 Transform Race Design (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -264,7 +264,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="l4.jpg" />
+            <img src="images/leveldesign/l4.jpg" />
             <span class="card-title">INSIDE Level Analysis (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -279,7 +279,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="l5.jpg" />
+            <img src="images/leveldesign/l5.jpg" />
             <span class="card-title">Titanfall 2 Level Analysis (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -296,7 +296,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="l6.jpg" />
+            <img src="images/leveldesign/l6.jpg" />
             <span class="card-title">Storytelling using Level Design (Individual Seminar)</span>
           </div>
           <div class="card-content white-text">
